--- a/header_and_violater.css
+++ b/header_and_violater.css
@@ -4,13 +4,25 @@
     justify-content: center;
 }
 
-.violater>.text{
+.violater>.violater-text{
     padding:10px;
+    margin: 0px;
     text-align: center;
 }
 
 .navbar-nav>.nav-item{
-    margin-left: 100px;
+    margin-left: 25px;
+}
+
+.navbar-nav>.nav-item>.nav-link{
+    color: #4EC1E6 !important;
+}
+.mobile_view>.navbar-nav>.nav-item{
+    height: 56px;
+}
+
+.mobile_view{
+    width: 100%;
 }
 
 .navbar>.container{
@@ -50,5 +62,40 @@
     background-color: #9C9ECB;
     border-radius: 50px;
     color: white;
+    width:160px;
+    font-weight: bold;
+}
+
+.loginwrap{
+    display: flex;
+    height: 38px;
+}
+
+.mobile_view>.navbar-nav>.nav-item{
+    width: 100%;
+}
+
+@media only screen and (min-width: 993px) {
+    .mobile_view{
+        display: none !important;
+    }
+}
+@media only screen and (max-width: 990px) {
+    .desktopview-navbar{
+        display: none;
+    }
+    .dropdn::after{
+        display: none;
+    }
+    .navcontainer{
+        width: 100%;
+        margin: 0px;
+        max-width: 100%;
+    }
+}
+@media only screen and (max-width: 570px) {
+    .bookfreetrial{
+        display: none;
+    }
 }
 
