--- a/header.css
+++ b/header.css
@@ -30,11 +30,16 @@
 .babyAge::after,.babyheight::after,.babyweight::after{
     content:"";
     align-self: center;
-    margin-left: 30px;
     width: 0.5px;
+    margin-left:30px;
     background: white;
     height: 40px;
 }
+.babyAge{
+    width:169px;
+}
+
+
 
 .babyImg{
     border-radius: 50px;
@@ -82,6 +87,20 @@
     padding: 0px;
     justify-content: space-around;
 }
+div>h3{
+    font-size: 23px;
+}
+
+div>h5{
+    font-size: 16px;
+}
+.h6, h6 {
+    font-size: 13px;
+}
+.h4, h4 {
+    font-size: 20px;
+}
+
 @media only screen and (max-width: 1200px) {
     .HeaderContainer{
         width: 100%;
@@ -93,7 +112,50 @@
         padding: 0px;
         justify-content: space-around;
     }
-    .baby_details{
-        width: 595px;
+
+}
+
+@media only screen and (max-width: 992px) {
+
+    .child_details{
+        align-items: center;
+        flex-direction: column;
     }
 }
+
+@media only screen and (max-width: 570px) {
+    .baby_details{
+        flex-direction: column;
+    }
+}
+@media only screen and (max-width: 570px) {
+ .babyAge{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 129px;
+ }
+ div>h3{
+     font-size: 18px;
+ }
+ div>h5{
+     font-size: 12px;
+ }
+ .babyAge{
+     margin: 0px;
+ }
+ .babyAge::after{
+    margin:0px;
+ }
+ .babyheight::after{
+     margin:9px;
+ }
+.babyweight,.babyheight{
+    margin-left: 13px;
+}
+.babyheight{
+    width: 94px;
+
+}
+}
+
