--- a/tabcardsslider.css
+++ b/tabcardsslider.css
@@ -6,9 +6,41 @@
     border-color: rgb(221, 221, 221);
     border-left: none;
     width: 150px;
+    display: flex;
+    justify-content: center;
+}
+.slicker{
+    display: flex;
+    justify-content: center;
+    margin: 0px auto;
+    width: 1100px;
+}
+.cardscontainer{
+    /* display: flex;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px; */
+}
+
+.slicker>.slick-list{
+    padding: 50px;
+}
+
+.slicker>.slick-list>.slick-track{
+    width: 100% !important; 
+}
+
+.slicker>.slick-list>.slick-track>.slick-slide{
+    width: 31% !important;
+}
+
+.tab-paneCards{
+    display: flex !important;
 }
 
 .tabs-link{
+    display: inline-flex;
+    padding: 0px;
     border: none !important;
     text-align:center;
     font-size: 16px;
@@ -16,7 +48,35 @@
     color: #4EC1E6 !important;
     background-color: white !important;
 }
-
+.pills-home,.pills-profile,.pills-contact{
+    height: 481px;
+}
+.Day-slider{
+    height: 86px;
+    display: flex;
+    justify-content: center;
+}
+.yearSlider{
+    display: flex !important;
+}
+.yrmon{
+    font-size: 12px;
+    color: #4DC1E6; 
+}
+.items{
+    margin: 0px 10px;
+}
+.jumbotron {
+    padding: 2rem 1rem;
+    margin-bottom: 2rem;
+    background-color: #e9ecef;
+    border-bottom-left-radius: .5rem;
+    border-bottom-right-radius: .5rem;
+    display: flex;
+    align-items: center;
+    width: 400px;
+    justify-content: center;
+  }
 .tabs{
     border: none;
     justify-content: center;
@@ -24,4 +84,93 @@
 
 .nav-pills .nav-item.show .nav-link, .nav-pills .nav-link.active {
     border: none;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link{
+    border-bottom: solid #4EC1E6 7px !important;
+}
+
+@media only screen and (max-width: 570px) {
+    .tabs > .nav-item{
+        width: 110px;
+    }
+}
+
+.spandetailsContainer{
+    display: flex;
+}
+.spandetails{
+    position: relative;
+    background-color: #8489CF;
+    border-radius: 50px;
+    left: 32px;
+    height: 40px;
+    color: white;
+    width: 75%;
+    display: flex;
+    padding: 0px 28px;
+    align-items: center;
+    bottom: 18px;
+    font-size: 10px;
+    box-shadow: 0 0 38px 0 rgba(132, 137, 207, 0.65);
+}
+.videocon{
+    height: 12px;
+    width: 12px;
+    justify-content: center;
+    align-self: center;
+    margin-right: 10px;
+}
+.bby{
+    margin-left: auto;
+}
+
+.card{
+    height: 400px;
+    margin: 0px 10px;
+    width: 300px;
+    padding: 10px;
+    border: none;
+    border-radius: 25px;
+    box-shadow: 0 0 32px 0 rgba(84, 189, 226, 0.36);
+}
+.card-img, .card-img-bottom, .card-img-top{
+    border-radius: 25px !important;
+    border-top-left-radius:25px;
+    border-top-right-radius:25px;
+}
+.card-img-top:after{
+    content: " ";
+    height: 10px;
+    width:  10px;
+    background-color: black;
+}
+.card-text,.cardcategorty{
+    font-size: 13px;
+    color: grey;
+}
+.card-title{
+    margin: 0px;
+}
+.card-body>.line{
+    border-bottom: 1px solid grey;
+    display: block; 
+    width: 100%;
+    margin: 10px 0px;
+}
+.PILL{
+    border-radius: 50px;
+    display: inline;
+    color: white;
+    padding: 5px;
+    font-size: 10px;
+    margin-right: 5px;
+}
+
+.yellowpill{
+    background-color: #FFC550;
+}
+
+.rosepill{
+    background-color: #FFA492;
 }
