Fixed responsive issue on slider

--- a/css/tabcardsslider.css
+++ b/css/tabcardsslider.css
@@ -23,6 +23,8 @@
 
 .slicker>.slick-list{
     padding: 50px;
+    margin: 0px auto;
+
 }
 
 .slicker>.slick-list>.slick-track{
@@ -172,6 +174,12 @@
 
 .rosepill{
     background-color: #FFA492;
+}
+
+@media only screen and (min-width: 1200px) {
+    .slicker>.slick-list{
+        width: 1200px;
+    }
 }
 
 @media only screen and (max-width: 420px) {
