--- a/css/recommended.css
+++ b/css/recommended.css
@@ -1,4 +1,4 @@
-.recommended>.container-fluid{
+.recommended>.container{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 100px 300px;
@@ -72,7 +72,14 @@
     display: inline-flex;
 }
 .recommendedElements{
+    width: 100%;
     justify-content: space-evenly;
+}
+.recommendedtext:before{
+    content: "";
+    height: 30px;
+    height: 300px;
+    background-color: black;
 }
 
 
@@ -88,21 +95,42 @@
 }
 @media only screen and (max-width: 992px) {
     .referalBox{
-        left: 19%;
+        left: 29%;
+    }
+    .recommended>.container{
+        grid-template-rows: 100px 500px;
+    }
+    .recommend1>.card,.recommend2>.card{
+        width: 227px;
     }
 }
-@media only screen and (max-width: 767px) {
+
+@media only screen and (max-width: 768px) {
     .referalBox{
-        left: 9%;
+        left: 1.7%;
+        bottom: 0;
+        top: 12px;
     }  
+      
+    .recommended>.container{
+        grid-template-rows: 200px 500px;
+    }
+    .recommend1>.card{
+        width: 242px;
+    }
+    .leftElements{
+        /* width: 381px; */
+    }
 }
 @media only screen and (max-width: 500px) {
     .referalBox{
         left: 14%;
-        width: 313px;
     }
     .referalBox>.span{
         font-size: 14px;
+    }
+    .recommendedElements{
+        flex-direction: column;
     }
 }
 @media only screen and (max-width: 467px) {
@@ -125,10 +153,13 @@
 }
 @media only screen and (max-width: 420px) {
     .referalBox{
-        left: 4%;
+        left: 0.2%;
         width: 313px;
     }
 .referalBox>.span{
     font-size: 14px;
+}
+.leftElements{
+    /* width: 344px; */
 }
 }
